css/styles.css
/* ---------------------------------- */
/* ------------ BACKGROUND ------------ */
/* ---------------------------------- */

html {
    scroll-behavior: smooth;
}

body {
    font-family: sans-serif;
    font-weight: bold;
    margin: 0;
    padding: 0;
    padding-top: 5px;
    background-color: #25283D;
}

/* ---------------------------------- */
/* ------------ CONTENT ------------- */
/* ---------------------------------- */
h3 {
    color: #00d0f5;
}

* p {
    color: #DCF763
}

#aboutUsTitle {
    font-family: 'Inter', sans-serif;
    font-weight: 800;
}

#get-started {
    font-family: 'Nanum Gothic', sans-serif;
}

#get-started:hover {
    cursor: pointer;
    color: rgb(206, 206, 206);
}

#aboutUs-subheading {
    font-family: 'Roboto Condensed', sans-serif;
    font-size: 24pt;
}

#aboutUsDescription {
    font-family: 'Nanum Gothic', sans-serif;
    line-height: 17pt;
}

.content-cards {
    grid-row: auto;
    grid-column: auto;

    background-color: #2E2E3A;
    color: white;
    opacity: 0.8;

    display: block;
    max-width: 100%;
    height: 350px;
    border-radius: 15px;

    text-decoration: none;
    line-height: 15pt;
    background-color: #454557;
    padding: 35px;

    text-decoration: none;
    border-style: solid;
    border-color: #2f2f3c;
    border-width: 1px;

    overflow: hidden;
    box-shadow: 0 5px 8px rgba(24, 24, 24, 0.2);
    background: linear-gradient(0deg, #333350, #3d3d4e);
}

.content-cards:hover {
    box-shadow: 0 0px 13px #dcf763;
    border-radius: 15px;
}

.content-description {
    font-weight: lighter;
    height: 120px;
    overflow-y: auto;
    padding-right: 10px;
    /* scrollbar-color: dark;
    scrollbar-width: 3px; */
    color: rgb(187, 187, 187)
}

.logo {
    display: inline;
    height: 15px;
    margin-right: 5px;
}

.content-cards>h4 {
    display: inline;
}

::-webkit-scrollbar {
    width: 8px;
    height: 8px;
}

::-webkit-scrollbar-thumb {
    background-color: #a3a3a380;
    border-radius: 4px;
}

::-webkit-scrollbar-track {
    background-color: #eeeeee00;
}

/* Hide the scrollbar */
::-webkit-scrollbar {
    display: none;
}

/* Show the scrollbar when hovering over the element */
.content-description:hover::-webkit-scrollbar {
    display: block;
}

/* tags system */
.tags {
    font-size: small;
}

.tagButton {
    background-color: transparent;
    border: none;
}

.tagButton:hover {
    box-shadow: 0 0px 13px #dcf763;
    border-radius: 15px;
}


/* ---------------------------------- */
/* --------- MEDIA QUERIES ---------- */
/* ---------------------------------- */

@media (width > 800px) {
    #aboutUsContainer {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr;
        background-color: #16273c;
        color: white;
        opacity: 0.8;
        width: 100vw;
        height: auto;
    }

    #aboutus-text {
        width: 75%;
        grid-column: 1;
        grid-row: 1;
        padding: 15%;
        padding-left: 17%;
        align-items: center;
        justify-content: center;
    }

    #aboutus-bg {
        width: 90%;
        height: auto;
        grid-row: 1;
        grid-column: 2;
        align-self: center;
    }

    #aboutUsTitle {
        font-size: 65px;
        color: #DCF763;
        text-transform: uppercase;
        margin-bottom: 0;
    }

    #aboutUs-subheading {
        color: #00d0f5;
        margin-top: 30px;
        margin-bottom: 30px;
    }

    #aboutUsDescription {
        color: rgb(219, 219, 219);
        text-align: left;
        font-weight: lighter;
    }

    #get-started {
        text-decoration: none;
        color: white;
        width: 100px;
        height: 35px;
        border-radius: 5px;
        border: none;
        margin-top: 20px;
        background: linear-gradient(#00d9ff, #3059bf);
        scroll-behavior: smooth;
    }

    #index_container {
        display: grid;
        gap: 30px;
        /* future -> make grid dynamic to however many cards we want to load */
        grid-template-columns: 1fr 1fr 1fr;
        grid-template-rows: 1fr 1fr;
        padding-left: 10vw;
        padding-right: 10vw;
        padding-top: 60px;
        margin-bottom: 60px;
    }
}

@media (width <=800px) {
    #index_container {
        display: grid;
        height: auto;
        gap: 30px;
        grid-template-columns: 1fr;
        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
        padding-top: 50px;
        padding-left: 10vw;
        padding-right: 10vw;
        margin-bottom: 10px;
    }

    #aboutUsContainer {
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: 2fr;
        background-color: #16273c;
        color: white;
        opacity: 0.8;
        width: 100vw;
        height: auto;
    }

    #aboutus-text {
        width: 75%;
        grid-column: 1;
        grid-row: 2;
        padding: 15%;
        padding-top: 0;
        align-items: center;
        justify-content: center;
    }

    #aboutus-bg {
        width: 90%;
        height: auto;
        grid-row: 1;
        grid-column: 1;
        align-self: center;
        margin: 5%;
        margin-bottom: 0;
    }

    #aboutUsTitle {
        font-size: 55px;
        color: #DCF763;
        text-transform: uppercase;
        margin-bottom: 0;
    }

    #aboutUs-subheading {
        margin-top: 30px;
        color: #00d0f5;
        margin-bottom: 30px;
    }

    #aboutUsDescription {
        color: rgb(219, 219, 219);
        text-align: left;
        font-weight: lighter;
    }

    #get-started {
        text-decoration: none;
        color: white;
        width: 100px;
        height: 35px;
        border-radius: 5px;
        border: none;
        margin-top: 20px;
        background: linear-gradient(#00d9ff, #3059bf);
        scroll-behavior: smooth;
    }
}



/* ---------------------------------- */
/* ------------ Our Team ------------ */
/* ---------------------------------- */
.member-pics {
    width: 180px;
    height: 180px;
    border-radius: 50%;
}

.member-cards:hover {
    box-shadow: 0 0px 13px #dcf763;
    border-radius: 14px;
}

.member-description {
    font-size: 11pt;
}

.member-cards:link {
    text-decoration: none;
}

.member-cards:visited {
    text-decoration: none;
}

.member-description {
    color: rgb(187, 187, 187);
}

@media (width > 800px) {
    #ourTeamContainer {
        background-color: #2E2E3A;
        padding-top: 40px;
        font-weight: normal;
        display: grid;
        height: 600px;
        width: 100vw;
        grid-template-columns: 275px 275px 275px;
        grid-template-rows: 110px 400px;
        padding-top: 50px;
        justify-content: center;
        justify-items: center;
        text-align: center;
    }

    .member-cards {
        padding: 25px;
        height: 280px;
        width: 200px;
        color: black;
        background-color: #454557;
        border-style: solid;
        border-color: #2f2f3c;
        border-radius: 14px;
        border-width: 1px;
        box-shadow: 0 5px 8px rgba(24, 24, 24, 0.2);
        background: linear-gradient(0deg, #3a3a49, #454557);
    }

    #our-team {
        font-family: 'Roboto Condensed', sans-serif;
        color: #dcf763;
        grid-row: 1;
        grid-column: 1 / span 3;
    }

    #member1 {
        grid-row: 2;
        grid-column: 1;
    }

    #member2 {
        grid-row: 2;
        grid-column: 2;
    }

    #member3 {
        grid-row: 2;
        grid-column: 3;
    }
}

@media (width <=800px) {
    #ourTeamContainer {
        margin-top: 40px;
        font-weight: normal;
        background-color: #2E2E3A;
        display: grid;
        width: 100vw;
        grid-template-columns: 350px;
        padding-top: 40px;
        padding-bottom: 60px;
        justify-content: center;
        justify-items: center;
        text-align: center;
    }

    .member-cards {
        display: grid;
        grid-template-columns: 30% 70%;
        grid-template-rows: 33% 67%;
        margin: 12px;
        padding: 20px;
        height: 90px;
        width: 300px;
        background-color: #454557;
        color: black;
        border-style: solid;
        border-color: #2f2f3c;
        border-radius: 14px;
        border-width: 1px;
        box-shadow: 0 5px 8px rgba(24, 24, 24, 0.2);
        background: linear-gradient(0deg, #3a3a49, #454557);
    }

    .member-pics {
        grid-column: 1;
        width: 100%;
        height: auto;

    }

    .member-name {
        grid-column: 2;
    }

    .member-description {
        grid-column: 2;
    }

    #our-team {
        font-family: 'Roboto Condensed', sans-serif;
        color: #dcf763;
    }
}

/* ---------------------------------- */
/* ------------- Footer ------------- */
/* ---------------------------------- */

#footer>* {
    font-family: 'Roboto Condensed', sans-serif;
    background-color: #16273c;
    display: flex;
    height: 50px;
    width: 100%;
    position: absolute;
    color: #00d0f5;
    text-align: center;
    font-weight: lighter;
    font-size: 10pt;
    justify-content: center;
    align-items: center;
}

